# JaxRT

./: .gitignore  CLAUDE.md  README.md  demo_born_convergence.py  pyproject.toml  pytest.ini  requirements.txt  simple_test.py
.github/: README.md
.github/workflows/: benchmark.yml  docs.yml  lint.yml  test.yml
examples/: shell_creation_example.py
jaxrt/: __init__.py
jaxrt/core/: __init__.py  born_convergence.py
jaxrt/maps/: __init__.py  convergence_map.py
jaxrt/planes/: __init__.py  density_plane.py  shells.py
jaxrt/utils/: __init__.py  interpolation.py
tests/: __init__.py  test_born_convergence.py  test_shells.py
