[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxrt"
version = "0.1.0"
description = "JAX-based gravitational lensing ray tracing library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "JaxRT Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "jax-cosmo>=0.1.0",
    "astropy>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "lenstools",  # For comparison tests
    "matplotlib>=3.5.0",  # For demo and visualization
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "lenstools",
    "matplotlib>=3.5.0",
]
ci = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort", 
    "flake8",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/jaxrt"
Repository = "https://github.com/your-org/jaxrt"

[tool.setuptools.packages.find]
include = ["jaxrt*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=jaxrt",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "lenstools: marks tests that require LensTools package",
]

[tool.coverage.run]
source = ["jaxrt"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]